--- a/src/app/admin/addcustomers/addcustomers.component.html
+++ b/src/app/admin/addcustomers/addcustomers.component.html
@@ -22,7 +22,7 @@
     <a href="#about">Post News</a>
     </nav>
 <div class="content">
-    <h2>Please fill in the following details...</h2>
+    <h2>Please fill in the following details..</h2>
     <hr>
 
     <form>
