--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-header></app-header> -->
 <!-- <app-adminhome></app-adminhome> -->
-<app-userheader></app-userheader>
+<!-- <app-userheader></app-userheader> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
