--- a/src/app/admin/mycustomers/mycustomers.component.html
+++ b/src/app/admin/mycustomers/mycustomers.component.html
@@ -14,9 +14,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <div *ngIf="adminnav.visible" class="sidebar"> -->
     <nav *ngIf="adminnav.avisible" class="sidebar">
-      <a  (click)="adminhome()">Home</a>
-      <a (click)="mycustomers()">My Customers</a>
-      <a (click)="addcustomers()">Add Customer</a>
+      <a  routerLink='/adminhome'>Home</a>
+      <a routerLink='/mycustomers'>My Customers</a>
+      <a routerLink='/addcustomers'>Add Customer</a>
       <a href="#about">Manage Customers</a>
       <a href="#about">Customer Griveances</a>
       <a href="#about">Website Management</a>
