--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <nav  class="navbar navbar-expand-sm navbar-light bg-dark" >
     <div class="collapse navbar-collapse" id="collapsibleNavId">
-       <img id="image" src="./assets/logo.jpeg" >
+        <img id="image" src="./assets/circle-cropped.png">
+       <!-- <img id="image" src="./assets/logo.jpeg" > -->
         <h2 style="color:wheat;">PROJECT WORLDS BANK</h2>
     </div>
 </nav>
@@ -9,7 +10,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item " style="margin-right: 30px;">
-                <a class="nav-link" href="#" style="color: white;">HOME</a>
+                <a class="nav-link" routerLink="userlogin" style="color: white;">HOME</a>
             </li>
             <li class="nav-item" style="margin-right: 30px;">
                 <a class="nav-link" routerLink="userhome" style="color: white;">NEWS</a>
