--- a/src/app/admin/addcustomers/addcustomers.component.html
+++ b/src/app/admin/addcustomers/addcustomers.component.html
@@ -13,14 +13,14 @@
     </div>
 </nav>
 <nav *ngIf="adminnav.avisible" class="sidebar">
-    <a  (click)="adminhome()">Home</a>
-    <a (click)="mycustomers()">My Customers</a>
-    <a (click)="addcustomers()">Add Customer</a>
+    <a  routerLink='/adminhome'>Home</a>
+    <a routerLink='/mycustomers'>My Customers</a>
+    <a routerLink='/addcustomers'>Add Customer</a>
     <a href="#about">Manage Customers</a>
     <a href="#about">Customer Griveances</a>
     <a href="#about">Website Management</a>
     <a href="#about">Post News</a>
-    </nav>
+  </nav>
 <div class="content">
     <h2>Please fill in the following details..</h2>
     <hr>
