--- a/src/app/admin/editandupdate/editandupdate.component.html
+++ b/src/app/admin/editandupdate/editandupdate.component.html
@@ -12,15 +12,15 @@
     </div>
 </nav>
 <!-- <div *ngIf="adminnav.visible" class="sidebar"> -->
-    <div class="sidebar">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">My Customers</a>
-    <a (click)="addcustomers()">Add Customer</a>
-    <a href="#about">Manage Customers</a>
-    <a href="#about">Customer Griveances</a>
-    <a href="#about">Website Management</a>
-    <a href="#about">Post News</a>
-  </div>
+    <nav *ngIf="adminnav.avisible" class="sidebar">
+        <a  routerLink='/adminhome'>Home</a>
+        <a routerLink='/mycustomers'>My Customers</a>
+        <a routerLink='/addcustomers'>Add Customer</a>
+        <a href="#about">Manage Customers</a>
+        <a href="#about">Customer Griveances</a>
+        <a href="#about">Website Management</a>
+        <a routerLink='/postnews'>Post News</a>
+      </nav>
   <div class="content">
     <h2 style="text-align: center ">Edit/Update Customer details</h2>
    <hr >
