--- a/src/app/admin/postnews/postnews.component.html
+++ b/src/app/admin/postnews/postnews.component.html
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="adminlogin" style="color: white;"><h4><i class="fa fa-sign-out">Logout </i></h4></a>
+                <a class="nav-link" routerLink="/adminlogin" style="color: white;"><h4><i class="fa fa-sign-out">Logout </i></h4></a>
             </li>
             
         </ul>
@@ -12,19 +12,19 @@
     </div>
 </nav>
 <!-- <div *ngIf="adminnav.visible" class="sidebar"> -->
-    <div class="sidebar">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">My Customers</a>
-    <a (click)="addcustomers()">Add Customer</a>
-    <a href="#about">Manage Customers</a>
-    <a href="#about">Customer Griveances</a>
-    <a href="#about">Website Management</a>
-    <a href="#about">Post News</a>
-  </div>
+    <nav *ngIf="adminnav.avisible" class="sidebar">
+        <a  routerLink='/adminhome'>Home</a>
+        <a routerLink='/mycustomers'>My Customers</a>
+        <a routerLink='/addcustomers'>Add Customer</a>
+        <a href="#about">Manage Customers</a>
+        <a href="#about">Customer Griveances</a>
+        <a href="#about">Website Management</a>
+        <a routerLink='/postnews'>Post News</a>
+      </nav>
   <div class="content">
     <h2 style="text-align: center ">Post News</h2>
    <hr >
-   <div style="margin:50px;">
+   <!-- <div style="margin:50px;"> -->
     <form>
             <div class="form-group col-sm-4">
                 <label for=""><b>News Headline:</b></label>
@@ -36,17 +36,11 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           
-    <div class="form-row">
-        <div class="form-group col-sm-4">
-
-            <button type="button" class="btn btn-primary">Submit</button>
+          <div class="col-sm-10 mb-2">
+            <button type="submit" class="btn btn-primary" (click)="submit()" >Submit</button>
+            <button type="reset" class="btn btn-danger" style="margin-left: 20px;">Reset</button>
         </div>
-    <div class="form-group col-sm-4">
 
-    <button type="button" class="btn btn-danger">Reset</button>
-
-    </div>
-</div>
     </form>
-</div>
+<!-- </div> -->
   </div>
