--- a/src/app/admin/addcustomers/addcustomers.component.html
+++ b/src/app/admin/addcustomers/addcustomers.component.html
@@ -19,7 +19,7 @@
     <a href="#about">Manage Customers</a>
     <a href="#about">Customer Griveances</a>
     <a href="#about">Website Management</a>
-    <a href="#about">Post News</a>
+    <a href='/postnews'>Post News</a>
   </nav>
 <div class="content">
     <h2>Please fill in the following details..</h2>
