--- a/src/app/user/user-home/user-home.component.css
+++ b/src/app/user/user-home/user-home.component.css
@@ -3,7 +3,7 @@
     padding: 0;
     width: 300px;
     background-color:darkgray;
-    position: fixed;
+    position: absolute;
     height: 100%;
     overflow: auto;
   }
