--- a/src/app/user/user-home/user-home.component.html
+++ b/src/app/user/user-home/user-home.component.html
@@ -13,9 +13,9 @@
 </nav>
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
-    <a href="#news">My Transactions</a>
+    <a routerLink="/mytransaction">My Transactions</a>
     <a href="#contact">Send/Receive</a>
-    <a href="#about">Transfer Funds</a>
+    <a routerLink="/transferfunds">Transfer Funds</a>
     <a routerLink="/atmsimulator">ATM Simulator</a>
     <a href="#about">Contact Us</a>
     <a href="#about">Submit Griveance</a>
