--- a/src/app/admin/editandupdate/editandupdate.component.html
+++ b/src/app/admin/editandupdate/editandupdate.component.html
@@ -73,15 +73,15 @@
             <input type="text" class="form-control" id="">
         </div>
         <div class="form-group col-sm-4">
-            <label for="exampleFormControlTextarea1"><b>Address</b></label>
+            <label for="exampleFormControlTextarea1"><b>Address:</b></label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           <div class="form-group col-sm-4">
             <label for="country">Bank Branch:</label>
             <select class="form-control form-control-sm" name="country" id="country2">
-                <option value="1">us</option>
-                <option value="2">uk</option>
-                <option value="3">india</option>
+                <option value="1">Hyderabad</option>
+                <option value="2">Banglore</option>
+                <option value="3">Chennai</option>
             </select>
        </div >
        <div class="form-group col-sm-4">
@@ -112,7 +112,7 @@
     </div>
     <div class="form-group col-sm-4">
 
-    <button type="button" class="btn btn-primary">update</button>
+    <button type="button" class="btn btn-primary">Update</button>
 
     </div>
 </div>
