--- a/src/app/admin/addcustomers/addcustomers.component.html
+++ b/src/app/admin/addcustomers/addcustomers.component.html
@@ -86,9 +86,9 @@
             <label class="my-1 mr-2" for=""><b>Bank Branch:</b></label>
             <select class="custom-select my-1 mr-sm-4" id="inlineFormCustomSelectPref">
                 <option selected>Choose...</option>
-                <option value="1">India</option>
-                <option value="2">US</option>
-                <option value="3">New York</option>
+                <option value="1">Hyderabad</option>
+                <option value="2">Banglore</option>
+                <option value="3">Chennai</option>
             </select>
         </div>
         <div class="form-row">
