--- a/src/app/admin/adminhome/adminhome.component.html
+++ b/src/app/admin/adminhome/adminhome.component.html
@@ -22,7 +22,7 @@
         <a routerLink='/postnews'>Post News</a>
       </nav>
   <div class="content">
-    <h2 style="text-align: center ">Welcome Admin</h2>
+    <h2 style="text-align: center ">Welcome ,Admin</h2>
    <hr >
    <div style="margin:50px;">
     <p>From here you can manage all of core Internet Banking settings.You can add/manage customers,view their transactions,edit their details and even delete them. You can also post news on the website</p>
