--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
                 <a class="nav-link" routerLink="userhome" style="color: white;">NEWS</a>
             </li>
             <li class="nav-item" style="margin-right: 30px;">
-                <a class="nav-link" routerLink="adminlogin" style="color: white;">CONTACT</a>
+                <a class="nav-link" routerLink="adminlogin" style="color: white;">ADMIN</a>
             </li>
             <li class="nav-item" style="margin-right: 30px;">
                 <a class="nav-link" href="#" style="color: white;">ABOUT US</a>
