--- a/src/app/user/transferfunds/transferfunds.component.html
+++ b/src/app/user/transferfunds/transferfunds.component.html
@@ -24,8 +24,8 @@
 </div>
 <div class="content">
     <h2 style="text-align: center ">Transfer Funds</h2>
-    <hr>
-    <div style="margin:50px;">
+    <hr><div style="margin:50px;">
+    
         <form>
             <div class="form-row">
                 <div class="form-group col-sm-4">
