--- a/src/app/user/user-home/user-home.component.html
+++ b/src/app/user/user-home/user-home.component.html
@@ -14,7 +14,7 @@
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
     <a routerLink="/mytransaction">My Transactions</a>
-    <a href="#contact">Send/Receive</a>
+    <a routerLink="/addbeneficiary">Send/Receive</a>
     <a routerLink="/transferfunds">Transfer Funds</a>
     <a routerLink="/atmsimulator">ATM Simulator</a>
     <a href="#about">Contact Us</a>
