--- a/src/app/user/transferfunds/transferfunds.component.html
+++ b/src/app/user/transferfunds/transferfunds.component.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-group col-sm-4">
 
-                    <button type="button" class="btn btn-primary">SUBMIT</button>
+                    <button type="button" class="btn btn-primary" routerLink="/successfull">SUBMIT</button>
                 </div>
                 <div class="form-group col-sm-4">
 
