--- a/src/app/user/add-details/add-details.component.html
+++ b/src/app/user/add-details/add-details.component.html
@@ -13,13 +13,13 @@
     </div>
 </nav>
 <div class="sidebar">
-    <a class="active" roterLink="/userhome">Home</a>
-    <a routerLink="/mytransaction">My Transactions</a>
-    <a href="#contact">Send/Receive</a>
-    <a href="#about">Transfer Funds</a>
-    <a routerLink="/atmsimulator">ATM Simulator</a>
-    <a href="#about">Contact Us</a>
-    <a href="#about">Submit Griveance</a>
+  <a routerLink="">Home</a>
+  <a routerLink="/mytransaction">My Transactions</a>
+  <a routerLink="/addbeneficiary">Send/Receive</a>
+  <a routerLink="/transferfunds">Transfer Funds</a>
+  <a routerLink="/atmsimulator">ATM Simulator</a>
+  <a routerLink="">Contact Us</a>
+  <a routerLink="">Submit Griveance</a>
 </div>
 <div style="margin-left: 300px;">
     <h1>Please fill in beneficiary  details</h1>
