--- a/src/app/user/atmsimulator/atmsimulator.component.html
+++ b/src/app/user/atmsimulator/atmsimulator.component.html
@@ -12,13 +12,13 @@
     </div>
 </nav>
 <div class="sidebar">
-    <a class="active" href="#home">Home</a>
+    <a routerLink="">Home</a>
     <a routerLink="/mytransaction">My Transactions</a>
-    <a href="#contact">Send/Receive</a>
-    <a href="#about">Transfer Funds</a>
+    <a routerLink="/addbeneficiary">Send/Receive</a>
+    <a routerLink="/transferfunds">Transfer Funds</a>
     <a routerLink="/atmsimulator">ATM Simulator</a>
-    <a href="#about">Contact Us</a>
-    <a href="#about">Submit Griveance</a>
+    <a routerLink="">Contact Us</a>
+    <a routerLink="">Submit Griveance</a>
   </div>
 <div class="content">
     <h2 style="text-align: center;margin-top: auto; ">ATM Simulator</h2>
