--- a/src/app/user/user-home/user-home.component.html
+++ b/src/app/user/user-home/user-home.component.html
@@ -12,11 +12,11 @@
     </div>
 </nav>
 <div class="sidebar">
-    <a class="active" href="#home">Home</a>
+    <a routerLink="">Home</a>
     <a routerLink="/mytransaction">My Transactions</a>
     <a routerLink="/addbeneficiary">Send/Receive</a>
     <a routerLink="/transferfunds">Transfer Funds</a>
     <a routerLink="/atmsimulator">ATM Simulator</a>
-    <a href="#about">Contact Us</a>
-    <a href="#about">Submit Griveance</a>
+    <a routerLink="">Contact Us</a>
+    <a routerLink="">Submit Griveance</a>
   </div>
