--- a/src/app/user/atmsimulator/atmsimulator.component.html
+++ b/src/app/user/atmsimulator/atmsimulator.component.html
@@ -42,17 +42,18 @@
                     <label class="custom-control-label" for="" style="margin-right: 30px;"><b>Credit</b></label>
                 </div>
             </div>
-            
+            <div class="form-row">
             <div class="form-group col-sm-4">
                 <label for=""><b>PIN(4 digit):</b></label>
                 <input type="text" class="form-control" id="">
             </div>
+            </div>
             <div class="form-row">
-                <div class="form-group col-sm-4">
+                <div class="form-group col-sm-2">
 
                     <button type="button" class="btn btn-success">SUBMIT</button>
                 </div>
-                <div class="form-group col-sm-4">
+                <div class="form-group col-sm-2">
 
                     <button type="button" class="btn btn-warning">RESET</button>
 
